--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "astral-gta6",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@fullpage/react-fullpage": "^0.1.49",
-    "framer-motion": "^12.23.24",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-scroll": "^1.9.3",
-    "react-smooth-scrollbar": "^8.0.6"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@tailwindcss/vite": "^4.1.15",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
-  }
+	"name": "astral-gta6",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"engines": {
+		"node": "18.x"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@fullpage/react-fullpage": "^0.1.49",
+		"framer-motion": "^12.23.24",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
+		"react-icons": "^5.5.0",
+		"react-scroll": "^1.9.3",
+		"react-smooth-scrollbar": "^8.0.6"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.36.0",
+		"@tailwindcss/vite": "^4.1.15",
+		"@types/react": "^19.1.16",
+		"@types/react-dom": "^19.1.9",
+		"@vitejs/plugin-react": "^5.0.4",
+		"eslint": "^9.36.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.22",
+		"globals": "^16.4.0",
+		"vite": "^7.1.7"
+	}
 }
