--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-icons": "^5.5.0",
-		"react-scroll": "^1.9.3",
-		"react-smooth-scrollbar": "^8.0.6"
+		"react-scroll": "^1.9.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
