--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@fullpage/react-fullpage": "^0.1.49",
+		"@studio-freight/lenis": "^1.0.42",
 		"framer-motion": "^12.23.24",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
